# ppython-cmake-scripts

./: .gitignore  CMakeLists.txt  build-ios.py
cmake/: ConfigureChecks.cmake  TryRunResults-iOS-arm64.cmake  makefile-variables.in
cmake/extensions/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt
cmake/python/: CMakeLists.txt
patches/3.6.6/iOS/: 0002-dec-aarch64.patch  0003-posixmodule.patch
